[package]
name = "rust-runc"
version = "0.1.1"
authors = ["fsyncd"]
description = "A crate for consuming the runc binary in your Rust applications."
repository = "https://github.com/fsyncd/rust-runc"
license = "Apache-2.0"
edition = "2018"
exclude = ["test_fixture"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
libc = "0.2"
log = "0.4"
mio = "0.7"
mio-uds = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
flate2 = "1.0"
tar = "0.4"
